// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a button 1`] = `
.css-tf2nfx,
[data-css-tf2nfx] {
  -webkit-transition: background-color 200ms;
  border-radius: 3px;
  height: 38px;
  padding: 0 30px;
  text-align: center;
  font-size: 16px;
  line-height: 38px;
  white-space: nowrap;
  display: inline-block;
  cursor: pointer;
  transition: background-color 200ms;
  text-decoration: none;
  border: 0;
  background-color: #BD4932;
  children: Hello;
  color: white;
}

.css-tf2nfx:hover,
[data-css-tf2nfx]:hover,
.css-tf2nfx[data-simulate-hover],
[data-css-tf2nfx][data-simulate-hover] {
  background-color: #6c2a1d;
  outline: none;
}

.css-tf2nfx:focus,
[data-css-tf2nfx]:focus,
.css-tf2nfx[data-simulate-focus],
[data-css-tf2nfx][data-simulate-focus] {
  background-color: #6c2a1d;
  outline: none;
}

<button
  className="css-tf2nfx"
>
  Hello
</button>
`;

exports[`Button should render a specific component 1`] = `
.css-10m27ti,
[data-css-10m27ti] {
  -webkit-transition: background-color 200ms;
  border-radius: 3px;
  height: 38px;
  padding: 0 30px;
  text-align: center;
  font-size: 16px;
  line-height: 38px;
  white-space: nowrap;
  display: inline-block;
  cursor: pointer;
  transition: background-color 200ms;
  text-decoration: none;
  border: 0;
  background-color: #BD4932;
  component: a;
  children: Hello;
  color: white;
}

.css-10m27ti:hover,
[data-css-10m27ti]:hover,
.css-10m27ti[data-simulate-hover],
[data-css-10m27ti][data-simulate-hover] {
  background-color: #6c2a1d;
  outline: none;
}

.css-10m27ti:focus,
[data-css-10m27ti]:focus,
.css-10m27ti[data-simulate-focus],
[data-css-10m27ti][data-simulate-focus] {
  background-color: #6c2a1d;
  outline: none;
}

<a
  className="css-10m27ti"
>
  Hello
</a>
`;
